Tue Mar 21 22:51:04 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Disable bans list in the channel popup menu because this is not yet
	    implemented.

Fri Mar 17 20:11:44 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Remove "clear" from various menus.  It's of extremely limited use,
	    easy to use accidentally, and still available with /clear

Fri Mar 17 16:23:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/preferences-dialog.glade:
	  - Get rid of extra, useless widgets

Fri Mar 17 15:46:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.h:
	  - Whitespace nitpickery
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Fiddle a bit with UI and whitespace

Fri Mar 17 22:41:09 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* src/fe-gnome/apps_xchat.schemas.in:
	* src/fe-gnome/Makefile.am:
	* configure.ac:
	* data/spellcheck.png:
	* data/preferences-dialog.glade:
	* data/Makefile.am:
	* po/POTFILES.in:
	  - Add a preference page to configure spellchecking. We can now
	  disable it and select languages to be used. (#324921, #326436)

Tue Mar 14 13:59:23 GMT 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/about.c:
	  - Explicitly hide the about dialog on delete to prevent future crash.
	    (#334534)

Mon Mar 13 03:07:31 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/userlist-gui.c:
	* data/xchat-gnome-ui.xml:
	  - Improve the user context menu situation (#333473).
