@@ -4,10 +4,10 @@ _Name=XChat-GNOME IRC Chat
 _GenericName=IRC Chat
 _Comment=Chat with people using IRC
 Exec=xchat-gnome
-Icon=xchat-gnome.png
+Icon=xchat-gnome
 Terminal=false
 Type=Application
-Categories=Application;Network;
+Categories=GNOME;GTK;Application;Network;IRCClient;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=xchat-gnome
-X-GNOME-Bugzilla-Component=
+X-GNOME-Bugzilla-Component=general
